--- a/src/README
+++ b/src/README
@@ -14,7 +14,7 @@ I chose to use collections in 2 different parts of the exercise:
 1)  In BrightnessImgCharMatcher, by holding a hash map and saving the average brightness of images.
     I was able to calculate and render an image in much more efficient way thanks to the hash map constant
     time for getting a stored value (average) given a key (image).
-2)  In uniqueMorseRepresentations, taking advantage of a hash map look up time as explained below.
+2)  In uniqueMorseRepresentations, taking advantage of a hash map look up time as explained down below.
 
 
 =============================
